--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <meta property="og:title" content="Artur Cagliari - Frontend Developer" />
     <meta property="og:description" content="Creating innovative, functional and user-friendly websites for modern digital solutions" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/placeholder.svg" />
+    <meta property="og:image:alt" content="Artur Cagliari - Frontend Developer" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@artcagliari" />
+    <meta name="twitter:image" content="/placeholder.svg" />
   </head>
 
   <body>
